<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/padding_small"
    android:layout_marginTop="@dimen/padding_small"
    android:layout_marginEnd="@dimen/padding_small"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="@dimen/radius_medium">

    <RelativeLayout
        android:id="@+id/layout_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_reminder_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/margin_very_small"
            android:contentDescription="@string/content_desc_reminder_on"
            android:src="@drawable/ic_reminder_on"
            android:tint="@color/colorText" />

        <TextView
            android:id="@+id/text_view_reminder"
            style="@style/TextAppearance.AppCompat.Base.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/image_view_reminder_on"
            android:fontFamily="@font/roboto"
            android:maxWidth="270sp"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_very_small"
            android:paddingTop="@dimen/padding_very_small"
            android:paddingEnd="@dimen/margin_very_small"
            android:paddingBottom="@dimen/padding_very_small"
            android:text="@string/default_reminder"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/image_button_edit_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_toStartOf="@id/image_button_delete_reminder"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_desc_edit_reminder"
            android:src="@drawable/ic_edit"
            android:tint="@color/colorText" />

        <ImageButton
            android:id="@+id/image_button_delete_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/margin_small"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_desc_delete_reminder"
            android:src="@drawable/ic_delete"
            android:tint="@color/colorText" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>